Removed <br/> tag

--- a/app/templates/tech.html
+++ b/app/templates/tech.html
@@ -9,5 +9,5 @@
 <div></div>
 <div><a href="https://reviewmeta.com/" target="_blank">ReviewMeta</a><br /></div>
 <div><a href="https://www.fastpeoplesearch.com/" target="_blank">PeopleFind</a><br /></div>
-<div><a href="https://www.google.com/advanced_search" target="_blank">Google Advanced Search</a><br /></div>
+<div><a href="https://www.google.com/advanced_search" target="_blank">Google Advanced Search</a></div>
 {% endblock %}
